--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="line"></div>
     <div class="line"></div>
   </div>
-  <ul id="menuItems">
+  <ul id="menuItems" class="hide">
 <li><a href="index.html">Home</a></li>
 <li><a href="aboutme.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
@@ -38,6 +38,7 @@ As a passionate coder, I have spent countless hours perfecting my craft and deve
   var menuItems = document.getElementById("menuItems");
   menuItems.classList.toggle("show");
 }
+
 	</script>
 
 </body>
