--- a/resources.html
+++ b/resources.html
@@ -31,7 +31,7 @@
 
 	</section>
 	<div>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDGYw1bV2heQ4ouCKv-uCzEiPdCTTib68JaJxMjePZ0g&s" alt="Alicia Vikander PNG">
+<img src="https://w7.pngwing.com/pngs/386/497/png-transparent-alicia-vikander-ex-machina-actor-film-actor-celebrities-black-hair-film.png" alt="Alicia Vikander PNG">
 	</div>
  
 	<footer>
