--- a/resources.html
+++ b/resources.html
@@ -31,7 +31,7 @@
 
 	</section>
 	<div>
-<img src="https://w7.pngwing.com/pngs/386/497/png-transparent-alicia-vikander-ex-machina-actor-film-actor-celebrities-black-hair-film.png" alt="Alicia Vikander PNG">
+<img src="https://e1.pngegg.com/pngimages/983/475/png-clipart-alicia-vikander-thumbnail.png" alt="Alicia Vikander PNG">
 	</div>
  
 	<footer>
