--- a/resources.html
+++ b/resources.html
@@ -31,7 +31,7 @@
 
 	</section>
 	<div>
-<img src="https://e1.pngegg.com/pngimages/983/475/png-clipart-alicia-vikander-thumbnail.png" alt="Alicia Vikander PNG">
+<img src="https://p1.hiclipart.com/preview/884/109/195/alicia-vikander-png-clipart.jpg" alt="Alicia Vikander PNG">
 	</div>
  
 	<footer>
