--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,12 @@
  <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook"style="width: 100px; height: 100px;">
 	
 	</section>
+	<h3>Send me an anonymous message. (message is sent to my email above.) </h3>
+	<form action="https://your-heroku-app-url.com/submit-feedback" method="POST">
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="5" cols="30"></textarea><br><br>
+        <input type="submit" value="Submit">
+    </form>
  
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
