--- a/resources.html
+++ b/resources.html
@@ -31,7 +31,7 @@
 
 	</section>
 	<div>
-<img src="https://p1.hiclipart.com/preview/884/109/195/alicia-vikander-png-clipart.jpg" alt="Alicia Vikander PNG">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWWwY-wnM7kdacvAFd9_PVa4jWZ-I1Q2vX_oThSTvDeA&usqp=CAU&ec=48600112" alt="Alicia Vikander">
 	</div>
  
 	<footer>
