--- a/calculator.html
+++ b/calculator.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>calculator</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>calculator</h1>
+ <div class="calculator">
+  <input type="text" id="result" readonly>
+  <div class="buttons">
+    <button onclick="clearResult()">C</button>
+    <button onclick="deleteLastChar()">&larr;</button>
+    <button onclick="appendChar('/')">/</button>
+    <button onclick="appendChar('7')">7</button>
+    <button onclick="appendChar('8')">8</button>
+    <button onclick="appendChar('9')">9</button>
+    <button onclick="appendChar('*')">*</button>
+    <button onclick="appendChar('4')">4</button>
+    <button onclick="appendChar('5')">5</button>
+    <button onclick="appendChar('6')">6</button>
+    <button onclick="appendChar('-')">-</button>
+    <button onclick="appendChar('1')">1</button>
+    <button onclick="appendChar('2')">2</button>
+    <button onclick="appendChar('3')">3</button>
+    <button onclick="appendChar('+')">+</button>
+    <button onclick="appendChar('0')">0</button>
+    <button onclick="appendChar('.')">.</button>
+    <button onclick="calculateResult()">=</button>
+  </div>
+</div>
 
+
+  <script src="script.js"></script>
+</body>
+</html>
