--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,7 @@
 	<section>
 <ul>
 <li><a href="chatbot.html">Chatbot</a></li>
+<li><a href="calculator.html">Calculator</a></li>
 </ul>
 	</section>
  
