--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>calculator</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <header>
