--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
-	<script>
-		function toggleMenu() {
-  var menuItems = document.getElementById("menuItems");
-  menuItems.classList.toggle("show");
-}
-
-	</script>
+	<script src="script.js"></script>
 
 </body>
 </html>
