--- a/projects.html
+++ b/projects.html
@@ -35,12 +35,6 @@
 <footer>
   <p>&copy; 2023 Ex Machina. All rights reserved.</p>
 </footer>
-	  <script>
-		function toggleMenu() {
-  var menuItems = document.getElementById("menuItems");
-  menuItems.classList.toggle("show");
-}
-
-	</script>
+	  <script src="script.js"></script>
 </body>
 </html>
