--- a/tech.html
+++ b/tech.html
@@ -41,11 +41,6 @@ Auto-GPT is an "AI agent" that given a goal in natural language, will attempt to
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
-<script>
-		function toggleMenu() {
-  var menuItems = document.getElementById("menuItems");
-  menuItems.classList.toggle("show");
-}
-</script>
+<script src="script.js"></script>
 </body>
 </html>
