--- a/projects.html
+++ b/projects.html
@@ -18,12 +18,12 @@
   <ul id="menuItems" class="hide">
 <li><a href="index.html">Home</a></li>
 <li><a href="aboutme.html">About Me</a></li>
-<li><a href="projects.html">Projects
+<li>Projects
     <ul class="submenu">
       <li><a href="chatbot.html">Chatbot</a></li>
 <li><a href="calculator.html">Calculator</a></li>
 	</ul>
- </a></li>
+ </li>
 <li><a href="resources.html">Resources</a></li>
 <li><a href="tech.html">Technology</a></li>
 <li><a href="contact.html">Contact</a></li>
