--- a/projects.html
+++ b/projects.html
@@ -15,18 +15,18 @@
     <div class="line"></div>
     <div class="line"></div>
   </div>
-  <ul id="menuItems" class="hide">
+  <ul id="menuItems">
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutme.html">About Me</a></li>
-    <li>Projects
-      <ul id="submenu" class="hide">
-        <li><a href="chatbot.html">Chatbot</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
-      </ul>
-    </li>
+<li id="projectsMenuItem">Projects</li>
     <li><a href="resources.html">Resources</a></li>
     <li><a href="tech.html">Technology</a></li>
     <li><a href="contact.html">Contact</a></li>
+  </ul>
+
+<ul id="submenu">
+     <li><a href="chatbot.html">Chatbot</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
   </ul>
 </nav>
 
