--- a/tech.html
+++ b/tech.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>Technology</h1>
+		<h1></h1>
 	</header>
 	<nav>
   <div class="hamburger" onclick="toggleMenu()">
@@ -29,7 +29,7 @@
   </ul>
 </nav>
 	<section>
-		<h2> Innovations: </h2>
+		<h2> Technology/Innovations: </h2>
 		<h3> Chat GPT</h3>
 <p> 
 ChatGPT is a language model developed by OpenAI. It is based on the GPT (Generative Pre-trained Transformer) architecture, specifically GPT-3.5. It is designed to generate human-like text responses and engage in conversational interactions with users.
