--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>Resources</h1>
+		<h1></h1>
 	</header>
 	<nav>
   <div class="hamburger" onclick="toggleMenu()">
@@ -30,7 +30,7 @@
   </ul>
 </nav>
 	<section>
-		<h2> Links: </h2>
+		<h2> Links/Resources: </h2>
 		<a href="https://chat.openai.com">Open AIs Chat GPT</a>
 <a href="https://github.com">GitHub Home</a>
 
