--- a/resources.html
+++ b/resources.html
@@ -36,12 +36,13 @@
 
 	</section>
 	<div>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWWwY-wnM7kdacvAFd9_PVa4jWZ-I1Q2vX_oThSTvDeA&usqp=CAU&ec=48600112" alt="Alicia Vikander">
+		<img src="https://www.flickr.com/photos/198362538@N05/52919085997/in/dateposted-public/" alt="Alicia Vikander">
+
 	</div>
  
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
-	<script src="script.js"></script>
+	<script src="scgript.js"></script>
 </body>
 </html>
