--- a/resources.html
+++ b/resources.html
@@ -35,10 +35,9 @@
 <a href="https://github.com">GitHub Home</a>
 
 	</section>
-	<div>
-		<img src="https://www.flickr.com/photos/198362538@N05/52919085997/in/dateposted-public/" alt="Alicia Vikander">
-
-	</div>
+<div>
+<img src="https://flic.kr/p/2oCh9Ar" alt="Alicia Vikander">
+</div>
  
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
