--- a/resources.html
+++ b/resources.html
@@ -36,12 +36,12 @@
 
 	</section>
 <div>
-<img src="https://flic.kr/p/2oCh9Ar" alt="Alicia Vikander">
+	
 </div>
  
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
-	<script src="scgript.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
