--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
 	<section>
 		<h2>Welcome</h2>
-		<p> My name is Steven Miller and this website for the time being is intended to showcase my frontend programming capabilities. It is meant to push the bounds of what can be done with merely html,css,and JavaScript.   
-	</section>
+		<p>My name is Steven Miller and this website serves the purpose of furthering the digital extension of myself.</p>
 
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
