--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<section>
 		<h2>Welcome</h2>
 		<p>My name is Steven Miller and this website serves the purpose of furthering the digital extension of myself.</p>
-
+	</section>
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
