--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<p>My name is Steven Miller and this website serves the purpose of furthering the digital extension of myself.</p>
 	</section>
 	<footer>
-		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
+		<p>&copy; 2023 Steven Miller. All rights reserved.</p>
 	</footer>
 	<script src="script.js"></script>
 
