--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,8 @@
 <ul class="container">
   <li class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></li>
   <li class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </li>
-  <li class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" <li class="part"><img src="https://w7.pngwing.com/pngs/170/924/png-transparent-microsoft-sql-server-microsoft-azure-sql-database-microsoft-text-logo-microsoft-azure.png" alt="sql"></li>
+  <li class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript"></li>
+   <li class="part"><img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql"></li>
        <li class="part"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python"></li>
   </ul>
     <footer>
