--- a/aboutme.html
+++ b/aboutme.html
@@ -33,13 +33,13 @@
 		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham Young University, where I first began programming. I took a computer science course, which introduced me to the world of computer programming. Although I have not yet obtained a college degree, my passion for learning and curiosity has helped me continue learning even though I'm not enrolled in school any longer.Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor. As for professional licenses I held a Master Fire Alarm Technician license in the state of Utah. I hope to one day secure a job in the tech industry. For the time being I will aim to become a professional coder and hence will further my skills in that direction. <p>
 	
 <h2>Languages</h2>
-<ul class="container">
-  <li class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></li>
-  <li class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </li>
-  <li class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript"></li>
-   <li class="part"><img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql"></li>
-       <li class="part"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python"></li>
-  </ul>
+<div class="container">
+  <div class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></div>
+  <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </div>
+  <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript"></div>
+   <div class="part"><img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql"></div>
+  <div class="part"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python"></div>
+  </div>
     <footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
