--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,9 @@
   <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript"></div>
    <div class="part"><img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql"></div>
   <div class="part"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python"></div>
-  </div>
+<div class="part"><img src="https://cdn-icons-png.flaticon.com/512/8297/8297373.png" alt="json"></div>
+
+</div>
     <footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
