--- a/aboutme.html
+++ b/aboutme.html
@@ -40,6 +40,8 @@
    <div class="part"><img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql"></div>
   <div class="part"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python"></div>
 <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/8297/8297373.png" alt="json"></div>
+<div class="part"><img src="https://static-00.iconduck.com/assets.00/c-sharp-c-icon-456x512-9sej0lrz.png" alt="c#"></div>
+<div class="part"><img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++"></div>
 
 </div>
     <footer>
