--- a/resources.html
+++ b/resources.html
@@ -7,24 +7,18 @@
 </head>
 <body>
 	<header>
-	<nav>
-  <div class="hamburger" onclick="toggleMenu()">
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
+ <nav class="navbar">
+  <div class="navbar-toggle" onclick="toggleMenu()">
+    <div class="toggle-line"></div>
+    <div class="toggle-line"></div>
+    <div class="toggle-line"></div>
   </div>
-  <ul id="menuItems">
+  <ul class="nav-menu" id="navMenu">
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutme.html">About Me</a></li>
-<li id="projectsMenuItem">Projects</li>
-    <li><a href="resources.html">Resources</a></li>
+  <li><a href="resources.html">Resources</a></li>
     <li><a href="tech.html">Technology</a></li>
     <li><a href="contact.html">Contact</a></li>
-  </ul>
-
-<ul id="submenu">
-     <li><a href="chatbot.html">Chatbot</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
   </ul>
 </nav>
 </header>
@@ -35,7 +29,7 @@
 
  
 	<footer>
-		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
+		<p>&copy; 2023 Steven Miller. All rights reserved.</p>
 	</footer>
 	<script src="script.js"></script>
 </body>
