--- a/tech.html
+++ b/tech.html
@@ -37,6 +37,22 @@ It's important to note that ChatGPT, like other language models, generates respo
 <details><p>
 Auto-GPT is an "AI agent" that given a goal in natural language, will attempt to achieve it by breaking it into sub-tasks and using the internet and other tools in an automatic loop. It uses OpenAI's GPT-4 or GPT-3.5 APIs, and is among the first examples of an application using GPT-4 to perform autonomous tasks.
 </p></details>
+
+ <h2>Education & Experience</h2>
+		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham Young University, where I first began programming. I took a computer science course, which introduced me to the world of computer programming. Although I have not yet obtained a college degree, my passion for learning and curiosity has helped me continue learning even though I'm not enrolled in school any longer.Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor. As for professional licenses I held a Master Fire Alarm Technician license in the state of Utah. I hope to one day secure a job in the tech industry. For the time being I will aim to become a professional coder and hence will further my skills in that direction. <p>
+	
+<h2>Languages</h2>
+<div class="container">
+  <div class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="html"></div>
+  <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="css"> </div>
+  <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="javascript"></div>
+   <div class="part"><img src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-380x512-ez505zus.png" alt="sql"></div>
+  <div class="part"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="python"></div>
+<div class="part"><img src="https://cdn-icons-png.flaticon.com/512/8297/8297373.png" alt="json"></div>
+<div class="part"><img src="https://static-00.iconduck.com/assets.00/c-sharp-c-icon-456x512-9sej0lrz.png" alt="c#"></div>
+<div class="part"><img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++"></div>
+
+</div>
  
     <footer>
 		<p>&copy; 2023 Steve Miller. All rights reserved.</p>
