--- a/aboutme.html
+++ b/aboutme.html
@@ -38,6 +38,7 @@
 <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/8297/8297373.png" alt="json"></div>
 <div class="part"><img src="https://static-00.iconduck.com/assets.00/c-sharp-c-icon-456x512-9sej0lrz.png" alt="c#"></div>
 <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++"></div>
+<div class="part"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"alt="git"></div>
 
 </div>
     <footer>
