--- a/aboutme.html
+++ b/aboutme.html
@@ -39,6 +39,7 @@
 <div class="part"><img src="https://static-00.iconduck.com/assets.00/c-sharp-c-icon-456x512-9sej0lrz.png" alt="c#"></div>
 <div class="part"><img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="c++"></div>
 <div class="part"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png"alt="git"></div>
+<div class="part"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"alt="react"></div>
 
 </div>
     <footer>
